# rosee_msg

./: CHANGELOG.rst  CMakeLists.txt  GraspingActionsAvailable.srv  README.md  package.xml
action/: ROSEECommand.action
msg/: ActionInfo.msg  EEGraspControl.msg  EEPinchControl.msg  EETriggerControl.msg  GraspingAction.msg  MotorCurrent.msg  MotorPhalangePressure.msg  ObjectModelMsg.msg  ROSEEActionControl.msg
srv/: ActionsInfo.srv  GraspingActionsAvailable.srv  GraspingPrimitiveAggregatedAvailable.srv  HandInfo.srv  NewGenericGraspingActionSrv.srv
